--- a/L3WpfApp/MainWindow.xaml
+++ b/L3WpfApp/MainWindow.xaml
@@ -9,9 +9,21 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <ToolBarTray Grid.Row="0">
+        <Menu Grid.Row="0" Margin="3" Padding="3">
+            <MenuItem Header="_Файл">
+                <MenuItem Header="_Открыть" Click="MenuItem_Click"/>
+                <MenuItem Header="_Сохранить" Click="MenuItem_Click_1"/>
+                <Separator/>
+                <MenuItem Header="_Закрыть" Click="MenuItem_Click_2"/>
+            </MenuItem>
+            <MenuItem Header="_Правка"/>
+            <MenuItem Header="_Справка"/>
+
+        </Menu>
+        <ToolBarTray Grid.Row="1">
             <ToolBar Margin="5" Padding="5">
                 <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged">
                     <TextBlock Text="Arial"/>
@@ -46,7 +58,7 @@
                 </StackPanel>
             </ToolBar>
         </ToolBarTray>
-        <TextBox x:Name="textBlock" Grid.Row="1" Margin="5" Padding="5" 
+        <TextBox x:Name="textBlock" Grid.Row="2" Margin="5" Padding="5" 
                    FontFamily="Arial" FontSize="16" TextWrapping="Wrap"/>
     </Grid>
 </Window>
