--- a/L3WpfApp/App.xaml
+++ b/L3WpfApp/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:L3WpfApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="ComboBoxSourses.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
