--- a/L3WpfApp/MainWindow.xaml
+++ b/L3WpfApp/MainWindow.xaml
@@ -35,18 +35,22 @@
         </Menu>
         <ToolBarTray Grid.Row="1">
             <ToolBar Margin="5" Padding="5">
-                <ComboBox Margin="5" Padding="5" SelectedIndex="0" Width="200" SelectionChanged="ComboBox_SelectionChanged">
-                    <TextBlock Text="Arial"/>
-                    <TextBlock Text="Times New Roman"/>
-                    <TextBlock Text="Verdana"/>
-                    <TextBlock Text="ISOCPEUR"/>
-                </ComboBox>
-                <ComboBox Margin="5" Padding="5" SelectedIndex="2" Width="50" SelectionChanged="ComboBox_SelectionChanged_1">
-                    <TextBlock Text="12"/>
-                    <TextBlock Text="14"/>
-                    <TextBlock Text="16"/>
-                    <TextBlock Text="18"/>
-                </ComboBox>
+                <ComboBox 
+                    Margin="5" 
+                    Padding="5" 
+                    SelectedIndex="0" 
+                    Width="200" 
+                    SelectionChanged="ComboBox_SelectionChanged"
+                    ItemsSource="{StaticResource fonts}"/>
+
+                <ComboBox 
+                    Margin="5" 
+                    Padding="5" 
+                    SelectedIndex="2" 
+                    Width="50" 
+                    SelectionChanged="ComboBox_SelectionChanged_1"
+                    ItemsSource="{StaticResource sizes}"/>
+
             </ToolBar>
             <ToolBar Margin="5" Padding="5">
                 <Button Click="Button_Click">
