--- a/L3WpfApp/MainWindow.xaml
+++ b/L3WpfApp/MainWindow.xaml
@@ -70,6 +70,10 @@
                     <RadioButton Content="Черный" IsChecked="True" Checked="RadioButton_Checked"/>
                     <RadioButton Content="Красный" Checked="RadioButton_Checked_1"/>
                 </StackPanel>
+                <ComboBox x:Name="themes" Width="150" Margin="5" SelectedIndex="0" SelectionChanged="themes_SelectionChanged">
+                    <TextBlock Text="Светлая тема"/>
+                    <TextBlock Text="Темная тема"/>
+                </ComboBox>
             </ToolBar>
         </ToolBarTray>
         <TextBox x:Name="textBlock" Grid.Row="2" Margin="5" Padding="5" 
